--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "node-omxplayer",
-  "version": "0.6.1",
-  "description": "A library for controlling the Raspberry Pi omxplayer from Node.js.",
+  "name": "node-omxplayer-raspberry-pi-cast",
+  "version": "0.6.2",
+  "description": "Fork of node-omxplayer to provide finer grained control for casting.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Ap0c",
-  "license": "MIT",
+  "author": "giorgian.borca-tasciuc",
+  "license": "GPL-3.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Ap0c/node-omxplayer"
+    "url": "https://gitlab.com/raspberry-pi-cast/node-omxplayer-raspberry-pi-cast"
   }
 }
